--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,3 +1,12 @@
-<h2> is my beautiful homepage!!</h2>
+<h1>Password Generator</h1>
 
-{{password}}
+<form action="password">
+  <select name="lenght">
+    <option value="6">6 </option>
+    <option value="7">7 </option>
+    <option value="8">8 </option>
+    <option value="9">9 </option>
+  </select>
+
+  <input type="submit" value="Generate Password">
+</form>
