--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -2,17 +2,28 @@
 
 <form action="{% url 'password' %}">
   <select name="lenght">
-    <option value="6">6 </option>
-    <option value="7">7 </option>
-    <option value="8">8 </option>
-    <option value="9">9 </option>
-    <option value="10">10 </option>
-    <option value="11">11 </option>
-    <option value="12" selected="selected">12 </option>
-    <option value="13">13 </option>
-    <option value="14">14 </option>
-    <option value="15">15 </option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    <option value="11">11</option>
+    <option value="12" selected="selected">12</option>
+    <option value="13">13</option>
+    <option value="14">14</option>
+    <option value="15">15</option>
   </select>
 
-  <input type="submit" value="Generate Password">
+  <br />
+
+  <input type="checkbox" name="uppercase" />Uppercase
+  <br />
+
+  <input type="checkbox" name="numbers" />numbers
+  <br />
+
+  <input type="checkbox" name="special" />Special characters
+  <br />
+
+  <input type="submit" value="Generate Password" />
 </form>
